# particle-sim

./: .gitignore  Makefile  Readme.md  main.c  particles_HOST
particles/: particles.c  particles.h
platform/: platform.c  platform.h
platform/embedded/: CMakeLists.txt  platform.c
platform/embedded/display/: display.c  display.h  ssd1306_driver.c  ssd1306_driver.h
platform/embedded/imu/: imu.c  imu.h  mpu6050.c  mpu6050.h
platform/host/: platform.c  platform.d
